delete route done?

--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -5,6 +5,7 @@
   <div class="add justify-center">
     <%= simple_form_for(@cocktail) do |f| %>
       <%= f.input :name %>
+      <%= f.input :photo, as: :file %>
       <button class="btn btn-success" type="submit">Create</button>
   <% end %>
   </div>
