--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,4 +1,4 @@
-<div class="card-category my-2" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80)">
+<div class="card-category my-2" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @cocktail.photo.key, height: 600, width: 1400, crop: :fill %>')">
   <%= @cocktail.name %>
 </div>
 
@@ -36,6 +36,10 @@
 
   <div class="text-center">
     <p><%= link_to "Back to cocktails List", root_path %></p>
+    <p><%= link_to " 🗑",
+            root_path,
+            method: :delete,
+            data: { confirm: "Are you sure?" } %></p>
   </div>
 </div>
 
